--- a/BeamWallet/ViewControllers/Login/EnterWalletPasswordViewController.xib
+++ b/BeamWallet/ViewControllers/Login/EnterWalletPasswordViewController.xib
@@ -16,9 +16,6 @@
         <array key="SF-Pro-Display-Regular.otf">
             <string>SFProDisplay-Regular</string>
         </array>
-        <array key="SF-Pro-Display-Semibold.otf">
-            <string>SFProDisplay-Semibold</string>
-        </array>
     </customFonts>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="EnterWalletPasswordViewController" customModule="BeamWallet" customModuleProvider="target">
@@ -59,6 +56,7 @@
                                     <nil key="highlightedColor"/>
                                     <userDefinedRuntimeAttributes>
                                         <userDefinedRuntimeAttribute type="boolean" keyPath="adjustFontSize" value="YES"/>
+                                        <userDefinedRuntimeAttribute type="string" keyPath="localizationKey" value="enter_password_title_1"/>
                                     </userDefinedRuntimeAttributes>
                                 </label>
                             </subviews>
@@ -86,6 +84,7 @@
                                         <userDefinedRuntimeAttribute type="number" keyPath="lineHeight">
                                             <real key="value" value="2"/>
                                         </userDefinedRuntimeAttribute>
+                                        <userDefinedRuntimeAttribute type="string" keyPath="localizationKey" value="password"/>
                                     </userDefinedRuntimeAttributes>
                                     <connections>
                                         <outlet property="delegate" destination="-1" id="0Sg-PD-ykk"/>
@@ -133,6 +132,7 @@
                                             <real key="value" value="22"/>
                                         </userDefinedRuntimeAttribute>
                                         <userDefinedRuntimeAttribute type="boolean" keyPath="adjustFontSize" value="YES"/>
+                                        <userDefinedRuntimeAttribute type="string" keyPath="localizationKey" value="open_your_wallet"/>
                                     </userDefinedRuntimeAttributes>
                                     <connections>
                                         <action selector="onLoginWithSender:" destination="-1" eventType="touchUpInside" id="zfg-DQ-0k6"/>
@@ -160,16 +160,6 @@
                                         <action selector="onChangeWalletWithSender:" destination="-1" eventType="touchUpInside" id="Sm8-F6-7A0"/>
                                     </connections>
                                 </button>
-                                <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="K5g-Kk-hFg">
-                                    <rect key="frame" x="0.0" y="69" width="253" height="0.0"/>
-                                    <fontDescription key="fontDescription" name="SFProDisplay-Semibold" family="SF Pro Display" pointSize="14"/>
-                                    <state key="normal" title="Forgot password?">
-                                        <color key="titleColor" red="0.0" green="0.96470588239999999" blue="0.82352941180000006" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                    </state>
-                                    <connections>
-                                        <action selector="onForgotPasswordWithSender:" destination="-1" eventType="touchUpInside" id="m8J-Vh-HDY"/>
-                                    </connections>
-                                </button>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xxN-ni-oL7">
                                     <rect key="frame" x="0.0" y="94" width="253" height="45"/>
                                     <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -194,6 +184,7 @@
                 <constraint firstItem="vUf-hW-nJa" firstAttribute="centerX" secondItem="sPr-XI-erP" secondAttribute="centerX" id="t6R-ON-kSF"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="n6b-Qo-3zm"/>
+            <point key="canvasLocation" x="53.600000000000001" y="70.614692653673174"/>
         </view>
     </objects>
     <resources>
