--- a/BeamWallet/ViewControllers/CreateWallet/CreateWalletPasswordViewController.xib
+++ b/BeamWallet/ViewControllers/CreateWallet/CreateWalletPasswordViewController.xib
@@ -45,6 +45,7 @@
                             <nil key="highlightedColor"/>
                             <userDefinedRuntimeAttributes>
                                 <userDefinedRuntimeAttribute type="boolean" keyPath="adjustFontSize" value="YES"/>
+                                <userDefinedRuntimeAttribute type="string" keyPath="localizationKey" value="create_new_password"/>
                             </userDefinedRuntimeAttributes>
                         </label>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vKG-Rj-luv">
@@ -70,6 +71,7 @@
                                         <userDefinedRuntimeAttribute type="number" keyPath="lineHeight">
                                             <real key="value" value="2"/>
                                         </userDefinedRuntimeAttribute>
+                                        <userDefinedRuntimeAttribute type="string" keyPath="localizationKey" value="enter_password"/>
                                     </userDefinedRuntimeAttributes>
                                     <connections>
                                         <outlet property="delegate" destination="-1" id="5Zw-iX-fr8"/>
@@ -99,6 +101,7 @@
                                         <userDefinedRuntimeAttribute type="number" keyPath="lineHeight">
                                             <real key="value" value="2"/>
                                         </userDefinedRuntimeAttribute>
+                                        <userDefinedRuntimeAttribute type="string" keyPath="localizationKey" value="confirm_password"/>
                                     </userDefinedRuntimeAttributes>
                                     <connections>
                                         <outlet property="delegate" destination="-1" id="Bsm-sG-NTX"/>
@@ -116,6 +119,7 @@
                                     <nil key="highlightedColor"/>
                                     <userDefinedRuntimeAttributes>
                                         <userDefinedRuntimeAttribute type="boolean" keyPath="adjustFontSize" value="YES"/>
+                                        <userDefinedRuntimeAttribute type="string" keyPath="localizationKey" value="password_requariments"/>
                                     </userDefinedRuntimeAttributes>
                                 </label>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lE7-ae-2Ub">
@@ -167,6 +171,7 @@
                                             <real key="value" value="22"/>
                                         </userDefinedRuntimeAttribute>
                                         <userDefinedRuntimeAttribute type="boolean" keyPath="adjustFontSize" value="YES"/>
+                                        <userDefinedRuntimeAttribute type="string" keyPath="localizationKey" value="next"/>
                                     </userDefinedRuntimeAttributes>
                                     <connections>
                                         <action selector="onNextWithSender:" destination="-1" eventType="touchUpInside" id="Q6R-u6-89x"/>
