--- a/BeamWallet/ViewControllers/Main/Wallet/Cells/WalletStatusCell.xib
+++ b/BeamWallet/ViewControllers/Main/Wallet/Cells/WalletStatusCell.xib
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -43,6 +43,7 @@
                                                 <real key="value" value="22"/>
                                             </userDefinedRuntimeAttribute>
                                             <userDefinedRuntimeAttribute type="boolean" keyPath="adjustFontSize" value="YES"/>
+                                            <userDefinedRuntimeAttribute type="string" keyPath="localizationKey" value="receive"/>
                                         </userDefinedRuntimeAttributes>
                                         <connections>
                                             <action selector="onReceivedWithSender:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="4Jk-zA-lYf"/>
@@ -61,6 +62,7 @@
                                                 <real key="value" value="22"/>
                                             </userDefinedRuntimeAttribute>
                                             <userDefinedRuntimeAttribute type="boolean" keyPath="adjustFontSize" value="YES"/>
+                                            <userDefinedRuntimeAttribute type="string" keyPath="localizationKey" value="send"/>
                                         </userDefinedRuntimeAttributes>
                                         <connections>
                                             <action selector="onSendWithSender:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="3YR-wQ-et0"/>
