--- a/BeamWallet/ViewControllers/Main/Wallet/Receive/WalletQRCodeViewController.xib
+++ b/BeamWallet/ViewControllers/Main/Wallet/Receive/WalletQRCodeViewController.xib
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -101,7 +101,7 @@ over an external secure channel</string>
                             </constraints>
                             <fontDescription key="fontDescription" name="SFProDisplay-Bold" family="SF Pro Display" pointSize="14"/>
                             <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="20" maxY="0.0"/>
-                            <state key="normal" title="copy address" image="iconCopyBlue">
+                            <state key="normal" title="share address" image="icShare">
                                 <color key="titleColor" red="0.01176470588" green="0.18039215689999999" blue="0.28627450980000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </state>
                             <userDefinedRuntimeAttributes>
@@ -111,7 +111,7 @@ over an external secure channel</string>
                                 <userDefinedRuntimeAttribute type="boolean" keyPath="adjustFontSize" value="YES"/>
                             </userDefinedRuntimeAttributes>
                             <connections>
-                                <action selector="onCopyWithSender:" destination="-1" eventType="touchUpInside" id="aeD-2d-0O4"/>
+                                <action selector="onShareWithSender:" destination="-1" eventType="touchUpInside" id="sRl-Jh-5hi"/>
                             </connections>
                         </button>
                     </subviews>
@@ -153,7 +153,7 @@ over an external secure channel</string>
         </view>
     </objects>
     <resources>
+        <image name="icShare" width="16" height="16"/>
         <image name="iconCancelBig" width="16" height="16"/>
-        <image name="iconCopyBlue" width="16" height="16"/>
     </resources>
 </document>
